2006-01-11  Andrew Jaquith <andrew@freshcookies.org>

        * 2.3.69
        
        * Minor tweaks to web unit tests; they now use the same
        test user and password as the unit tests. Small adjiustments
        to JDBC setup scripts to inject test users into database
        at setup time.
        
2006-01-10  Andrew Jaquith <andrew@freshcookies.org>

        * 2.3.68
        
        * We now have basic web unit tests, courtesy of the integration
        of JWebUnit into build.xml and tests/etc/webtests.xml.
        Four jars were added to the 'lib' dir for testing. Web unit
        testing simulates a browser's experience and verifies that
        the following test cases run properly:
        - Anonymous viewing (Main and About pages)
        - Setting asserted name via cookies
        - Creating user profiles
        - Logging in to JSPWiki using a password
        Four combinations are explicitly tested: custom and container
        authentication, each of these with both the XML and JDBC user
        database types. Note to developers: the Ant task
        "webtests" should be part of your test plan. Learn, love
        and embrace JWebUnit. It's easy to express test cases
        with it, and we will (no doubt) be creating more test cases
        as we go... see examples in package com.ecyrd.jspwiki.web.
        
        * Rules for accessing UserPreferences in container-mananged
        environments have been relaxed significantly: users do not
        have to be logged in to edit preferences or their profiles.
        Instead, unauthenticated users attempting to create a profile
        receive a polite error message directing them to log in first.
        If the container shares user data with JSPWiki, the profile
        will be saved, and the user will as a result be registered
        with the container.
        
        * UserDatabase interface receives one new method:
        isSharedWithContainer(), to permit JSPWiki to serve