@@ -61,6 +61,47 @@ public class CommonTests extends TestCase
         t.assertTextNotPresent( "(not logged in)" );
     }
     
+    public void testCreateGroup()
+    {
+        login();
+        String group = "Test" + String.valueOf( System.currentTimeMillis() );
+        t.beginAt( "/NewGroup.jsp" );
+        t.assertFormPresent( "newGroup" );
+        t.setWorkingForm( "newGroup" );
+        t.assertFormElementPresent( "members" );
+        t.assertSubmitButtonPresent( "ok" );
+        t.submit( "ok" );
+        
+        //Oops! We forgot to name it
+        t.assertTextPresent( "Could not create group: Group name may not be blank" );
+        t.setFormElement( "name", group );
+        t.setFormElement( "members", "" );
+        t.submit( "ok" );
+        
+        //Oops! We forgot to include 
+        t.assertTextPresent( "Could not create group: The group must have at least one member." );
+        t.setFormElement( "name", group );
+        t.setFormElement( "members", "Janne Jalkanen" );
+        t.submit( "ok" );
+        
+        // Verify the group was created 
+        t.assertTextNotPresent( "Could not create group" );
+        t.gotoPage("/Wiki.jsp?page=Group" + group );
+        t.assertTextPresent( "This is a wiki group." );
+        
+        // Verifiy that anonymous users can't view the page
+        t = new WebTester();
+        t.getTestContext().setBaseUrl( m_baseURL );
+        t.beginAt( "/Wiki.jsp" );
+        t.gotoPage("/Wiki.jsp?page=Group" + group );
+        t.assertTextPresent( "Please sign in" );
+        
+        // Log in again and verify we can read it
+        login();
+        t.gotoPage("/Wiki.jsp?page=Group" + group );
+        t.assertTextPresent( "This is a wiki group." );
+    }
+    
     protected void createProfile()
     {
         createProfile( true );
@@ -121,6 +162,17 @@ public class CommonTests extends TestCase
         t.assertTextPresent( "(authenticated)" );
     }
 
+    public void login() 
+    {
+        // Start at front page; try to log in
+        t.beginAt( "/Wiki.jsp?page=Main" );
+        t.clickLinkWithText( "Log in" );
+        t.setWorkingForm( "login" );
+        t.setFormElement( "j_username", "janne" );
+        t.setFormElement( "j_password", "myP@5sw0rd" );
+        t.submit( "action" );
+    }
+    
     /**
      * Generates and registers a user with a unique name.
      * @return the generated account name
